idk lots of stuff

--- a/templates/about_us.html
+++ b/templates/about_us.html
@@ -1,19 +1,20 @@
 {% extends '_layout.html' %}
 {% block title %}About Us{% endblock %}
-{% block styles %}<link rel="stylesheet" href="/static/css/about_us.css">{% endblock %}
+{% block styles %}
+<link rel="stylesheet" href="/static/css/about_us.css">{% endblock %}
 
 {% block body %}
 
 <div class="container pt-4">
 
-<div>
-<h1 class="about-header">What is Course Elector?</h1>
-</div>
-<hr class="about-hr">
+    <div>
+        <h1 class="about-header">What is Course Elector?</h1>
+    </div>
+    <hr class="about-hr">
 
-<div>
-<p class="about-paragraph"> CourseElector is an online web service made by UNCC students, for UNCC students. It provides students with the tools they need to connect with and leave feedback on their courses, as well as view detailed information about their classes contributed by their peers.</p>
-</div>
+    <div>
+        <p class="about-paragraph"> CourseElector is an online web service made by UNCC students, for UNCC students. It provides students with the tools they need to connect with and leave feedback on their courses, as well as view detailed information about their classes contributed by their peers.</p>
+    </div>
 
 
 </div>
