--- a/templates/course_directory_search.html
+++ b/templates/course_directory_search.html
@@ -1,6 +1,7 @@
 {% extends '_layout.html' %}
 {% block title %}Course Directory Search{% endblock %}
-{% block styles %}<link rel="stylesheet" href="/static/css/course_directory_search.css">{% endblock %}
+{% block styles %}
+<link rel="stylesheet" href="/static/css/course_directory_search.css">{% endblock %}
 {% block body %}
 
 
@@ -11,55 +12,55 @@
 
 <section>
 
-<form action="/search" method="post" class="mt-4 search-directory-form-adjuster">
-    <div class="mb-3 search-directory-indiv-selector">
-    <label for="major" class="search-directory-label-adjuster">Course Major</label>
-    <select name="major" id="major" class="form-select form-select-lg mb-3 search-directory-select-border" aria-label=".form-select-lg example">
-        <option selected value="">Please select your major</option>
-        {% for major in majors_set %}
-        <option value="{{ major }}">{{ major }}</option>
-        {% endfor %}
-    </select>
-    </div>
-    
-    <div class="mb-3 search-directory-indiv-selector">
-    <label for="quality" class="search-directory-label-adjuster">Sort By Class Quality Rating</label>
-    <select name="quality" id="quality" class="form-select form-select-lg mb-3 search-directory-select-border" aria-label=".form-select-lg example">
-        <option selected value="">Please choose a class quality based upon our 5 star user-submitted system</option>
-        <option value="Quality1Plus">One Star or Higher</option>
-        <option value="Quality2Plus">Two Stars or Higher</option>
-        <option value="Quality3Plus">Three Stars or Higher</option>
-        <option value="Quality4Plus">Four Stars or Higher</option>
-        <option value="Quality5Only">Five Star Quality Only</option>
-    </select>
-    </div>
-
-    <div class="mb-3 search-directory-indiv-selector">
-        <label for="difficulty" class="search-directory-label-adjuster">Sort By Class Difficulty Rating</label>
-        <select name="difficulty" id="difficulty" class="form-select form-select-lg mb-3 search-directory-select-border" aria-label=".form-select-lg example">
-            <option selected value="">Please choose a class difficulty based upon our 5 star user-submitted system</option>
-            <option value="Diff1Plus">One Star or Higher</option>
-            <option value="Diff2Plus">Two Stars or Higher</option>
-            <option value="Diff3Plus">Three Stars or Higher</option>
-            <option value="Diff4Plus">Four Stars or Higher</option>
-            <option value="Diff5Only">Five Star Quality Only</option>
-        </select>
+    <form action="/search" method="post" class="mt-4 search-directory-form-adjuster">
+        <div class="mb-3 search-directory-indiv-selector">
+            <label for="major" class="search-directory-label-adjuster">Course Major</label>
+            <select name="major" id="major" class="form-select form-select-lg mb-3 search-directory-select-border" aria-label=".form-select-lg example">
+                <option selected value="">Please select your major</option>
+                {% for major in majors_set %}
+                <option value="{{ major }}">{{ major }}</option>
+                {% endfor %}
+            </select>
         </div>
-    
-    <div class="mb-3 search-directory-indiv-selector"> 
-    <label for="credit" class="form-label search-directory-label-adjuster">Sort By Credit Hours:</label>
-    <input type="number" name="credit" id="credit" class="form-control search-directory-select-border" title="Please enter a value from 0 to 4" placeholder="Enter a number between 0 and 4" max="4" min="0" step="1">
-    </div>
-    
-    <div class="search-directory-button-container">
-    <button type="submit" class="btn btn-primary search-directory-button-adjuster">Submit</button>
-    </div>
-</form>
+
+        <div class="mb-3 search-directory-indiv-selector">
+            <label for="quality" class="search-directory-label-adjuster">Sort By Class Quality Rating</label>
+            <select name="quality" id="quality" class="form-select form-select-lg mb-3 search-directory-select-border" aria-label=".form-select-lg example">
+                <option selected value="">Please choose a class quality based upon our 5 star user-submitted system</option>
+                <option value="Quality1Plus">One Star or Higher</option>
+                <option value="Quality2Plus">Two Stars or Higher</option>
+                <option value="Quality3Plus">Three Stars or Higher</option>
+                <option value="Quality4Plus">Four Stars or Higher</option>
+                <option value="Quality5Only">Five Star Quality Only</option>
+            </select>
+        </div>
+
+        <div class="mb-3 search-directory-indiv-selector">
+            <label for="difficulty" class="search-directory-label-adjuster">Sort By Class Difficulty Rating</label>
+            <select name="difficulty" id="difficulty" class="form-select form-select-lg mb-3 search-directory-select-border" aria-label=".form-select-lg example">
+                <option selected value="">Please choose a class difficulty based upon our 5 star user-submitted system</option>
+                <option value="Diff1Plus">One Star or Higher</option>
+                <option value="Diff2Plus">Two Stars or Higher</option>
+                <option value="Diff3Plus">Three Stars or Higher</option>
+                <option value="Diff4Plus">Four Stars or Higher</option>
+                <option value="Diff5Only">Five Star Quality Only</option>
+            </select>
+        </div>
+
+        <div class="mb-3 search-directory-indiv-selector">
+            <label for="credit" class="form-label search-directory-label-adjuster">Sort By Credit Hours:</label>
+            <input type="number" name="credit" id="credit" class="form-control search-directory-select-border" title="Please enter a value from 0 to 4" placeholder="Enter a number between 0 and 4" max="4" min="0" step="1">
+        </div>
+
+        <div class="search-directory-button-container">
+            <button type="submit" class="btn btn-primary search-directory-button-adjuster">Submit</button>
+        </div>
+    </form>
 
 
-<div class="search-directory-image-adjuster">
-<img src="/static/images/search-background.jpg" class="img-fluid" alt="Responsive image">
-</div>
+    <div class="search-directory-image-adjuster">
+        <img src="/static/images/search-background.jpg" class="img-fluid" alt="Responsive image">
+    </div>
 </section>
 
 
