--- a/templates/_layout.html
+++ b/templates/_layout.html
@@ -5,22 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %}</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     {% block styles %}{% endblock %}
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" rel="stylesheet">
-    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </head>
 
 <body class="mb-5">
     <nav class="sticky-top navbar navbar-expand-lg bg-success" data-bs-theme="dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="/">Home</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -29,13 +24,11 @@
                         <a class="nav-link{% if forum_active %} active{% endif %}" href="/view_forum_posts">Forum</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link{% if course_active %} active{% endif %}" href="/search">Course
-                            Directory</a>
+                        <a class="nav-link{% if course_active %} active{% endif %}" href="/search">Course Directory</a>
                     </li>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link{% if rating_active %} active{% endif %}" href="/submit_rating">Submit
-                            Rating</a>
+                        <a class="nav-link{% if rating_active %} active{% endif %}" href="/submit_rating">Submit Rating</a>
                     </li>
                     </li>
                     <li class="nav-item">
@@ -52,7 +45,7 @@
                     </li>
                     {% else %}
                     <li class="nav-item">
-                        <a class="nav-link{% if login_active %} active{% endif %}" href="/login_signup">Log In or Sign up</a>
+                        <a class="nav-link{% if login_active %} active{% endif %}" href="/login_signup">Log In or Sign Up</a>
                     </li>
                     {% endif %}
                 </ul>
